# EpiGIMP2.0

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  README.md  clang-tidy-report.txt  codecov.yml  coverage.xml  instalQuaZip.md  lint.cmake  test.epg  vcpkg.json
.github/: dependabot.yml
.github/workflows/: build.yaml  coverage.yaml  github-action-coverage.yaml  github-actions-build.yaml  github-actions-lint.yaml  lint.yaml  releases.yaml.yml  releases.yml
docs/: CI.md  Utilisateur.md  epgformat.md  releases.md
include/: EpgFile.hpp  document.hpp  epgformat.hpp  imagebuffer.hpp  layer.hpp  window.hpp
include/app/: AppService.hpp  Command.hpp  History.hpp  Signal.h  ToolParams.hpp
include/app/commands/: CommandUtils.hpp  LayerCommands.hpp  PixelCommands.hpp  SelectionCommands.hpp  StrokeCommand.hpp
include/common/: Colors.hpp  Geometry.hpp
include/core/: BucketFill.hpp  Compositor.hpp  Document.hpp  ImageBuffer.h  ImageBuffer.hpp  Layer.h  Layer.hpp  Selection.hpp  Transform.hpp  document  document.hpp
include/io/: EpgFormat.hpp  EpgJson.hpp  EpgTypes.hpp  EpgZip.hpp  IStorage.hpp  Logger.hpp  epgformat.hpp
include/ui/: CanvasWidget.hpp  ImageConversion.hpp  PanClamp.hpp  Render.hpp  image.hpp  window.hpp
packaging/linux/: epigimp.desktop
src/: EpgFile.cpp  EpgFormat.cpp  epgformat.cpp  image.cpp  layer.cpp  main.cpp  stb_impl.cpp  window.cpp
src/app/: AppService.cpp  CMakeLists.txt  History.cpp
src/app/commands/: CommandUtils.cpp  LayerCommands.cpp  PixelCommands.cpp  SelectionCommands.cpp  StrokeCommand.cpp
src/core/: BucketFill.cpp  CMakeLists.txt  Compositor.cpp  Document.cpp  FloodFill.cpp  ImageBuffer.cpp  Layer.cpp  Selection.cpp  Transform.cpp
src/io/: CMakeLists.txt  EpgFormat.cpp  EpgZip.cpp  StbImpl.cpp  epgformat.cpp
src/render/: CMakeLists.txt
src/ui/: CMakeLists.txt  CanvasWidget.cpp  ImageConversion.cpp  Render.cpp  image.cpp  main.cpp  resources.qrc  window.cpp
tests/: CMakeLists.txt  main.cpp
tests/app/: AppServiceUtilsForTest.hpp  CMakeLists.txt  test_AppService.cpp  test_App_Service.cpp  test_BucketFill.cpp  test_DeleteSelection.cpp  test_DuplicateLayer.cpp  test_Epg.cpp  test_Eraser.cpp  test_History.cpp  test_MoveLayer.cpp  test_Pencil.cpp  test_ResizeLayer.cpp  test_RotateLayer.cpp  test_Signals.cpp  test_StrokeBehavior.cpp
tests/core/: CMakeLists.txt  test_BucketFill.cpp  test_BucketFill_benchmark.cpp  test_Compositor.cpp  test_Document.cpp  test_FloodFill.cpp  test_ImageBuffer.cpp  test_Layer.cpp  test_TransformRotate.cpp
tests/io/: CMakeLists.txt  test_Epg.cpp
tests/ui/: CMakeLists.txt  test_CanvasWidget.cpp  test_FocusNavigation.cpp  test_ImageConversion.cpp  test_MainWindow.cpp  test_PanClamp.cpp  test_Shortcuts.cpp  test_ui_main.cpp  ui_test_helpers.hpp
